[gd_scene format=3 uid="uid://dvxoqkocqh2f0"]

[ext_resource type="Script" uid="uid://d0akqm0ofwyu" path="res://node.gd" id="1_o7u2a"]
[ext_resource type="Texture2D" uid="uid://ccye2wy1y71et" path="res://CounterPicturesDrawings/pixil-frame-0.png" id="2_o7u2a"]
[ext_resource type="Texture2D" uid="uid://buaav1pyb6vh" path="res://CounterPicturesDrawings/pixilart-drawing.png" id="3_j8kkg"]
[ext_resource type="Texture2D" uid="uid://b7i8brr32pwkt" path="res://CounterPicturesDrawings/pixil-layer-4.png" id="4_yh4yk"]
[ext_resource type="Script" uid="uid://fri2sqdhoukt" path="res://ingredient_boba.gd" id="5_p8s74"]
[ext_resource type="Texture2D" uid="uid://c7l7ntvhgda7h" path="res://CounterPicturesDrawings/pixil-layer-3.png" id="6_o4fqm"]
[ext_resource type="Script" uid="uid://bqqqbn55pf6qd" path="res://ingredient_tea_base.gd" id="7_gfmxp"]
[ext_resource type="Texture2D" uid="uid://x0i50he1ows1" path="res://CounterPicturesDrawings/pixil-layer-2.png" id="8_1n88h"]
[ext_resource type="Texture2D" uid="uid://icumt5a4uys5" path="res://cursors/pixil-layer-3.png" id="8_yh4yk"]
[ext_resource type="Script" uid="uid://btrp6s8t3y8mh" path="res://ingredient_whipped_cream.gd" id="9_opjno"]
[ext_resource type="Texture2D" uid="uid://c4entan1sw5t4" path="res://CounterPicturesDrawings/pixil-layer-1.png" id="10_meb7l"]
[ext_resource type="Script" uid="uid://cn7qbt3x7dk5u" path="res://ingredient_pudding.gd" id="11_w30ff"]
[ext_resource type="Texture2D" uid="uid://usbfwphnvdv3" path="res://CounterPicturesDrawings/pixil-layer-5.png" id="12_xy6fp"]
[ext_resource type="Script" uid="uid://py778e6a6028" path="res://ingredient_drizzle.gd" id="13_uws2o"]
[ext_resource type="Texture2D" uid="uid://hv20qf56sdne" path="res://CounterPicturesDrawings/pixil-layer-0.png" id="14_iylel"]
[ext_resource type="Script" uid="uid://yorj6sigfpet" path="res://ingredient_jelly.gd" id="15_yj5sn"]
[ext_resource type="Texture2D" uid="uid://dega7jp5e30tg" path="res://MainDrinkPicturesDrawings/pixil-layer-0.png" id="16_jtbqm"]
[ext_resource type="Texture2D" uid="uid://dud5nxp7qxwgy" path="res://buttonPictures/pixil-layer-0.png" id="17_ek5vw"]
[ext_resource type="Script" uid="uid://mta2nwfccvo2" path="res://serve_button.gd" id="18_jip8q"]
[ext_resource type="Texture2D" uid="uid://w5j431n54tae" path="res://buttonPictures/pixil-layer-3.png" id="19_euc68"]
[ext_resource type="Script" uid="uid://20qjq83lk63w" path="res://texture_button.gd" id="20_38t8r"]
[ext_resource type="Texture2D" uid="uid://c20iw0hl3kij0" path="res://helpPagePics/pixil-frame-0 (2).png" id="21_j8kkg"]
[ext_resource type="PackedScene" uid="uid://cp0gywtq0wpj1" path="res://drink(main).tscn" id="21_jef5d"]
[ext_resource type="Texture2D" uid="uid://8thh7bj6r3mr" path="res://images/pixil-layer-Layer 3.png" id="22_q1yuq"]
[ext_resource type="Script" uid="uid://deeq70vbsagee" path="res://help_button.gd" id="22_yh4yk"]
[ext_resource type="Script" uid="uid://bdy4yjk0u82ko" path="res://customer.gd" id="23_uacds"]
[ext_resource type="PackedScene" uid="uid://5viqq0qq516k" path="res://order.tscn" id="24_y0lqw"]
[ext_resource type="Script" uid="uid://24pa85wh5yfh" path="res://order.gd" id="25_c5xsv"]
[ext_resource type="Texture2D" uid="uid://plborsevy18n" path="res://faces/pixil-layer-1.png" id="26_84x1k"]
[ext_resource type="Texture2D" uid="uid://npnwmyf2yvpn" path="res://faces/pixil-layer-2.png" id="27_0hwxg"]
[ext_resource type="Texture2D" uid="uid://bgryf2nlycyqu" path="res://faces/pixil-layer-3.png" id="28_si2mt"]

[node name="mainScene" type="Node" unique_id=1116201008]
script = ExtResource("1_o7u2a")

[node name="background" type="TextureRect" parent="." unique_id=1195104240]
z_index = -2
texture_filter = 1
offset_right = 1152.0
offset_bottom = 648.0
size_flags_horizontal = 3
size_flags_vertical = 3
texture = ExtResource("2_o7u2a")
stretch_mode = 4

[node name="counterTop" type="TextureRect" parent="." unique_id=830597047]
texture_filter = 1
offset_top = 322.0
offset_right = 1159.0
offset_bottom = 652.0
size_flags_horizontal = 3
size_flags_vertical = 3
texture = ExtResource("3_j8kkg")
expand_mode = 1
metadata/_edit_use_anchors_ = true

[node name="ingredientBoba" type="TextureButton" parent="." unique_id=189161826]
texture_filter = 1
offset_left = 64.0
offset_top = 384.0
offset_right = 144.0
offset_bottom = 464.0
size_flags_horizontal = 3
size_flags_vertical = 3
texture_normal = ExtResource("4_yh4yk")
ignore_texture_size = true
stretch_mode = 0
script = ExtResource("5_p8s74")

[node name="ingredientTeaBase" type="TextureButton" parent="." unique_id=2089760024]
texture_filter = 1
offset_left = 64.0
offset_top = 512.0
offset_right = 144.0
offset_bottom = 591.0
size_flags_horizontal = 3
size_flags_vertical = 3
texture_normal = ExtResource("6_o4fqm")
ignore_texture_size = true
stretch_mode = 0
script = ExtResource("7_gfmxp")

[node name="cursor" type="Sprite2D" parent="ingredientTeaBase" unique_id=116721402]
z_index = 20
position = Vector2(-218, 21)
texture = ExtResource("8_yh4yk")

[node name="ingredientWhippedCream" type="TextureButton" parent="." unique_id=154371565]
texture_filter = 1
offset_left = 200.0
offset_top = 384.0
offset_right = 280.0
offset_bottom = 464.0
size_flags_horizontal = 3
size_flags_vertical = 3
texture_normal = ExtResource("8_1n88h")
ignore_texture_size = true
stretch_mode = 0
script = ExtResource("9_opjno")

[node name="ingredientPudding" type="TextureButton" parent="." unique_id=1600901583]
texture_filter = 1
offset_left = 200.0
offset_top = 512.0
offset_right = 280.0
offset_bottom = 592.0
size_flags_horizontal = 3
size_flags_vertical = 3
texture_normal = ExtResource("10_meb7l")
ignore_texture_size = true
stretch_mode = 0
script = ExtResource("11_w30ff")

[node name="ingredientDrizzle" type="TextureButton" parent="." unique_id=300249321]
texture_filter = 1
offset_left = 336.0
offset_top = 384.0
offset_right = 416.0
offset_bottom = 464.0
size_flags_horizontal = 3
size_flags_vertical = 3
texture_normal = ExtResource("12_xy6fp")
ignore_texture_size = true
stretch_mode = 0
script = ExtResource("13_uws2o")

[node name="ingredientJelly" type="TextureButton" parent="." unique_id=2020921765]
texture_filter = 1
offset_left = 336.0
offset_top = 512.0
offset_right = 416.0
offset_bottom = 592.0
size_flags_horizontal = 3
size_flags_vertical = 3
texture_normal = ExtResource("14_iylel")
ignore_texture_size = true
stretch_mode = 0
script = ExtResource("15_yj5sn")

[node name="makingArea" type="TextureRect" parent="." unique_id=698456300]
texture_filter = 1
offset_left = 522.0
offset_top = 391.0
offset_right = 747.0
offset_bottom = 616.0
size_flags_horizontal = 3
size_flags_vertical = 3
texture = ExtResource("16_jtbqm")

[node name="serveButton" type="TextureButton" parent="." unique_id=774292102]
texture_filter = 1
offset_left = 828.0
offset_top = 391.0
offset_right = 1091.0
offset_bottom = 457.0
texture_normal = ExtResource("17_ek5vw")
stretch_mode = 4
script = ExtResource("18_jip8q")

[node name="resetButton" type="TextureButton" parent="." unique_id=2090852171]
texture_filter = 1
offset_left = 828.0
offset_top = 467.0
offset_right = 1091.0
offset_bottom = 533.0
texture_normal = ExtResource("19_euc68")
stretch_mode = 4
script = ExtResource("20_38t8r")

[node name="helpButton" type="TextureButton" parent="." unique_id=207965093]
texture_filter = 1
offset_left = 828.0
offset_top = 543.0
offset_right = 1091.0
offset_bottom = 609.0
texture_normal = ExtResource("21_j8kkg")
stretch_mode = 4
script = ExtResource("22_yh4yk")

[node name="customDrink" parent="." unique_id=228826666 instance=ExtResource("21_jef5d")]
position = Vector2(632.9999, 498)
scale = Vector2(1.9999996, 1.9999996)

[node name="customer" type="Sprite2D" parent="." unique_id=1605418159]
z_index = -1
texture_filter = 1
position = Vector2(575.50006, 648)
scale = Vector2(7.20625, 7.244445)
texture = ExtResource("22_q1yuq")
script = ExtResource("23_uacds")

[node name="order" parent="customer" unique_id=614222586 instance=ExtResource("24_y0lqw")]
position = Vector2(7.840416, -22.085888)
scale = Vector2(0.20815265, 0.20705521)
script = ExtResource("25_c5xsv")

[node name="happyFace" type="Sprite2D" parent="customer" unique_id=1580112874]
visible = false
texture_filter = 1
texture = ExtResource("26_84x1k")

[node name="midFace" type="Sprite2D" parent="customer" unique_id=147598083]
visible = false
texture_filter = 1
texture = ExtResource("27_0hwxg")

[node name="sadFace" type="Sprite2D" parent="customer" unique_id=296107413]
visible = false
texture = ExtResource("28_si2mt")

[connection signal="customer_load" from="." to="customer" method="_on_node_customer_load"]
[connection signal="customer_load" from="." to="customer/order" method="_on_node_customer_load"]
[connection signal="add_Boba" from="ingredientBoba" to="customDrink" method="_on_ingredient_boba_add_boba"]
[connection signal="mouse_entered" from="ingredientBoba" to="ingredientBoba" method="_on_mouse_entered"]
[connection signal="mouse_exited" from="ingredientBoba" to="ingredientBoba" method="_on_mouse_exited"]
[connection signal="pressed" from="ingredientBoba" to="ingredientBoba" method="_on_pressed"]
[connection signal="add_tea" from="ingredientTeaBase" to="ingredientTeaBase" method="_on_add_tea"]
[connection signal="add_tea" from="ingredientTeaBase" to="customDrink" method="_on_ingredient_tea_base_add_tea"]
[connection signal="mouse_entered" from="ingredientTeaBase" to="ingredientTeaBase" method="_on_mouse_entered"]
[connection signal="mouse_exited" from="ingredientTeaBase" to="ingredientTeaBase" method="_on_mouse_exited"]
[connection signal="pressed" from="ingredientTeaBase" to="ingredientTeaBase" method="_on_pressed"]
[connection signal="add_whipped" from="ingredientWhippedCream" to="customDrink" method="_on_ingredient_whipped_cream_add_whipped"]
[connection signal="pressed" from="ingredientWhippedCream" to="ingredientWhippedCream" method="_on_pressed"]
[connection signal="add_pudding" from="ingredientPudding" to="customDrink" method="_on_ingredient_pudding_add_pudding"]
[connection signal="pressed" from="ingredientPudding" to="ingredientPudding" method="_on_pressed"]
[connection signal="add_drizzle" from="ingredientDrizzle" to="ingredientDrizzle" method="_on_add_drizzle"]
[connection signal="add_drizzle" from="ingredientDrizzle" to="customDrink" method="_on_ingredient_drizzle_add_drizzle"]
[connection signal="pressed" from="ingredientDrizzle" to="ingredientDrizzle" method="_on_pressed"]
[connection signal="add_jelly" from="ingredientJelly" to="ingredientJelly" method="_on_add_jelly"]
[connection signal="add_jelly" from="ingredientJelly" to="customDrink" method="_on_ingredient_jelly_add_jelly"]
[connection signal="pressed" from="ingredientJelly" to="ingredientJelly" method="_on_pressed"]
[connection signal="pressed" from="serveButton" to="serveButton" method="_on_pressed"]
[connection signal="serve" from="serveButton" to="." method="_on_serve_button_serve"]
[connection signal="pressed" from="resetButton" to="resetButton" method="_on_pressed"]
[connection signal="reset" from="resetButton" to="ingredientTeaBase" method="_on_reset_button_reset"]
[connection signal="reset" from="resetButton" to="ingredientDrizzle" method="_on_reset_button_reset"]
[connection signal="reset" from="resetButton" to="ingredientJelly" method="_on_reset_button_reset"]
[connection signal="reset" from="resetButton" to="customDrink" method="_on_reset_button_reset"]
[connection signal="pressed" from="helpButton" to="helpButton" method="_on_pressed"]
